[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Scripts/UI/SaveSlot.gd" type="Script" id=1]
[ext_resource path="res://Assets/Styles/Themes/SaveSlot.tres" type="Theme" id=2]
[ext_resource path="res://Assets/Fonts/SaveSlotFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Assets/Styles/Themes/SaveSlotBg.tres" type="Theme" id=4]
[ext_resource path="res://Assets/Scenes/UI/SlotActionButtons.tscn" type="PackedScene" id=5]

[sub_resource type="Animation" id=4]
resource_name = "Blink"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.784314 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="SaveSlot" type="PanelContainer"]
margin_right = 386.0
margin_bottom = 252.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 386.0
margin_bottom = 252.0

[node name="ActionButtons" parent="HBoxContainer" instance=ExtResource( 5 )]
margin_bottom = 252.0

[node name="Hmargin" type="Control" parent="HBoxContainer"]
margin_left = 4.0
margin_right = 24.0
margin_bottom = 252.0
rect_min_size = Vector2( 20, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 28.0
margin_right = 332.0
margin_bottom = 252.0
custom_constants/separation = 8

[node name="VmarginTop" type="Control" parent="HBoxContainer/VBoxContainer"]
margin_right = 304.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )

[node name="SlotIndex" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 304.0
margin_bottom = 88.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "SLOT"
uppercase = true

[node name="Timestamp" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 96.0
margin_right = 304.0
margin_bottom = 156.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "TIMESTAMP"
uppercase = true

[node name="Description" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 164.0
margin_right = 304.0
margin_bottom = 224.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Level 10"
uppercase = true

[node name="VmarginBottom" type="Control" parent="HBoxContainer/VBoxContainer"]
margin_top = 232.0
margin_right = 304.0
margin_bottom = 252.0
rect_min_size = Vector2( 0, 20 )

[node name="Hmargin2" type="Control" parent="HBoxContainer"]
margin_left = 336.0
margin_right = 386.0
margin_bottom = 252.0
rect_min_size = Vector2( 50, 0 )

[node name="Button" type="Button" parent="."]
margin_right = 386.0
margin_bottom = 252.0
theme = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Blink = SubResource( 4 )
anims/RESET = SubResource( 5 )

[connection signal="clear_button_pressed" from="HBoxContainer/ActionButtons" to="." method="_on_ActionButtons_clear_button_pressed"]
[connection signal="select_button_pressed" from="HBoxContainer/ActionButtons" to="." method="_on_ActionButtons_select_button_pressed"]
[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
